export enum Prioridad{
    ALTA,
    MEDIA,
    BAJA
};