@startuml DiagramaClases

title TODO-LIST

class Aplicacion{
    - listaDeTareas: ListaTarea;
    - listaDeTareasCompletadas: ListaTarea;
    
    + agregarNuevaTarea()
    + editarUnaTarea()
    + eliminarUnaTarea(tarea: Tarea):Tarea
    + getListasDeTareas():ListaDeTarea
    + cargarTareasCompletas():void
}

class Tarea{
    - titulo:string;
    - descripcion:string;
    - fechaVec:number;
    - prioridad:Prioridad;
    - categoria:string;
    - etiqueta:string;
    - avance:number;

    + getTitulo(): string
    + setTitulo(valor:string)
    + getDescripcion():string
    + setDescripcion(valor: string)
    + getFechaVec():number
    + setFechaVec(valor: number)
    + getPrioridad():Prioridad
    + setPrioridad(valor: Prioridad)
    + getCategoria():string
    + setCategoria(valor: string)
    + getEtiqueta():string
    + setEtiqueta(valor: string)
    + getAvance():number
    + setAvance(valor: number)
}

class NodoTarea{
    - _value: Tarea;
    - _next: NodoTarea;

    + gets&sets()
}

class ListaTarea{
    - head: NodoTarea;
}

class CrearTarea{
    + crearNuevaTarea(titulo:string, descripcion:string, fecha:number, prioridad:Prioridad, categoria:string, etiqueta:string):Tarea
}

class EditarTarea{
    + editarTitulo(lista: ListaTarea, tarea: Tarea, nuevoTitulo: string):void
    + editarDescripcion(lista: ListaTarea, tarea: Tarea, nuevaDescripcion: string): void
    + editarFechaVec(lista: ListaTarea, tarea: Tarea, nuevoVec: number):void
    + editarPrioridad(lista: ListaTarea, tarea: Tarea, nuevaPrioridad: Prioridad):void
    + editarCategoria(lista: ListaTarea, tarea: Tarea, nuevaCategoria: string):void
    + editarEtiqueta(lista: ListaTarea, tarea: Tarea, nuevaEtiqueta:string):void
    + editarAvance(lista: ListaTarea, tarea: Tarea, nuevoAvance: number):void
}

class BuscadorTareaFacade{
    + buscarPorTitulo(lista: ListaTarea, titulo: string):Tarea
    + buscarPorFecha(lista: ListaTarea, fecha: number):Tarea
}


class OrdenamientoTarea{

}



enum Prioridad{
    ALTA,
    MEDIA,
    BAJA
}

'relaciones
Aplicacion *-- ListaTarea

ListaTarea *-- NodoTarea
NodoTarea *-- Tarea

BuscadorTareaFacade--OrdenamientoTarea
OrdenamientoTarea--CrearTarea
CrearTarea--EditarTarea
@enduml